Добавил комментарии в README, описание API в swagger, добавление билда по hash
